get scale by type